Fix glossary hover tooltip clipping inside chapters.

--- a/shared/styles.css
+++ b/shared/styles.css
@@ -6,49 +6,49 @@
 
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-Thin.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-Thin.woff2") format("woff2");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-Light.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-Regular.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-SemiBold.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-SemiBold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-Bold.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-ExtraBold.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-ExtraBold.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yekan Bakh";
-  src: url("../fonts/yekan-bakh/woff2/YekanBakh-Black.woff2") format("woff2");
+  src: url("../../../../../../public/fonts/yekan-bakh/woff2/YekanBakh-Black.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -56,28 +56,28 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/static/Roboto-Regular.ttf") format("truetype");
+  src: url("../../../../../../public/fonts/Roboto/static/Roboto-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/static/Roboto-Medium.ttf") format("truetype");
+  src: url("../../../../../../public/fonts/Roboto/static/Roboto-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/static/Roboto-SemiBold.ttf") format("truetype");
+  src: url("../../../../../../public/fonts/Roboto/static/Roboto-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/static/Roboto-Bold.ttf") format("truetype");
+  src: url("../../../../../../public/fonts/Roboto/static/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -209,7 +209,7 @@ button { font: inherit; cursor: pointer; }
   border: 1px solid var(--line);
   border-radius: var(--radius);
   margin-bottom: 1.5rem;
-  overflow: hidden;
+  overflow: visible;
   box-shadow: var(--shadow);
   scroll-margin-top: 72px;
 }
@@ -501,7 +501,8 @@ a.gloss-term::after {
   content: attr(data-tip);
   position: absolute;
   left: 50%;
-  bottom: calc(100% + 0.45rem);
+  top: calc(100% + 0.45rem);
+  bottom: auto;
   transform: translateX(-50%);
   width: max-content;
   max-width: min(22rem, 88vw);
